# algorithms

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md
src/: numberutils.cpp  numberutils.h  stringutils.cpp  stringutils.h
src/linearalgebra/matrices/: compressedmatrix.h  compressedmatrixelementacessor.h  compressedmatrixiterator.h  compressedmatrixmultiplylhshandler.h  compressedmatrixmultiplyrhshandler.h  coordinatelistmatrix.h  coordinatelistmatrixiterator.h  densematrix.h  densematrixiterator.h  matrix.h  matrixiterator.h  matrixmultiplication.h  matrixmultiplylhshandler.h  matrixmultiplyrhshandler.h  matrixoperations.h  matrixsubtraction.h  matrixsummation.h  pointermatrix.h  pointermatrixelementproxy.h  pointermatrixiterator.h
src/linearalgebra/solvers/: biconjugategradientmethod.h  conjugategradientmethod.h  gradientmethod.h  stabilizedbiconjugategradientmethod.h  substitutionmethod.h
test/functional/: test_fdm.cpp  test_fem.cpp  test_speed.cpp
test/unit/: test_numberutils.cpp  test_stringutils.cpp
test/unit/linearalgebra/matrices/: test_compressedmatrix.cpp  test_coordinatelistmatrix.cpp  test_densematrix.cpp  test_matrix.h
test/unit/linearalgebra/solvers/: test_biconjugategradientmethod.cpp  test_conjugategradientmethod.cpp  test_gradientmethod.cpp  test_ludecompositor.cpp  test_stabilizedbiconjugategradientmethod.cpp  test_substitutionmethod.cpp
